additional css files for all html files

--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
 </header>
 <body>
 
+    <div class="container">
+        <button href="quiz.html">Quiz</button>
+        <br>
+        <button href="recipes.html">All Recipes</button>
+        <br>
+        <button href="recipes.html">Maps</button>
+    </div>
 </body>
 </html>
