index.html file framework, css for menu page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 
     <div class="container">
-        <button href="quiz.html">Quiz</button>
-        <br>
-        <button href="recipes.html">All Recipes</button>
-        <br>
-        <button href="recipes.html">Maps</button>
+        <button id= button1 href="quiz.html">Quiz</button>
+        
+        <button id= button2 href="recipes.html">All Recipes</button>
+       
+        <button id= button2 href="recipes.html">Maps</button>
     </div>
 </body>
 </html>
