--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--link css here-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
     <!--link javascript/jquery here-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -17,11 +18,11 @@
 <body>
 
     <div class="container">
-        <button id= button1 href="quiz.html">Quiz</button>
+        <button onclick="window.location.href='quiz.html'">Quiz</button>
         
-        <button id= button2 href="recipes.html">All Recipes</button>
+        <button onclick="window.location.href='recipes.html'">All Recipes</button>
        
-        <button id= button2 href="recipes.html">Maps</button>
+        <button onclick="window.location.href='maps.html'">Maps</button>
     </div>
 </body>
 </html>
