--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!--link css here-->
+    <link rel="stylesheet" type="text/css" href="assets/css/recipes.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/quiz.css">
+
     <!--link javascript here-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
