added nav bar to quiz.html, added api capability to recipe.html/js, added css to recipe page

--- a/quiz.html
+++ b/quiz.html
@@ -16,6 +16,29 @@
 
     <title>Quiz</title>
 </head>
+    <div id="wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="quiz.html">Take our quiz!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recipes.html">All recipes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="store.html">Find your store</a>
+                    </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+        <!-- End of navbar -->
+    </div>
 <body>
     <div id="question"></div>
     <button id="next-button">Next</button>
