--- a/recipes.html
+++ b/recipes.html
@@ -6,19 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/recipes.css">
 </head>
 <body>
 
     <div id="wrapper">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand" href="index.html" id="logo">Staying In</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-                        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <div class="container">
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -34,47 +28,17 @@
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container -->
-                </nav>
-                <!-- End of navbar -->
+                </div>
+                <!-- /.container -->
+            </nav>
+            <!-- End of navbar -->
     </div>
 
-    <div class="container">
-            <main class="row">
-            <div class="col-md-8">
-                <article class="block">
-                <h1 class="block-header">Recipes</h1>
-                <hr />
-                <div class="row">
-                    <div class="col-sm-6 col-md-12 col-lg-6">
-                    <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                    </div>
-                    <div class="col-sm-6 col-md-12 col-lg-6">
-                    <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-sm-6 col-md-12 col-lg-6">
-                    <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                    </div>
-                    <div class="col-sm-6 col-md-12 col-lg-6">
-                    <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-sm-6 col-md-12 col-lg-6">
-                    <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                    </div>
-                </div>
-                </article>
-            </div>
-            </main>
-        </div>
+    <div id = "recipes-appear-here"></div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src ="assets/javascript/recipe.js"></script>
+    <button>More Recipes</button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src ="assets/javascript/recipe.js"></script>
 </body>
 </html>
