--- a/store.html
+++ b/store.html
@@ -6,38 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/store.css">
 </head>
 <body>
 
-<div id="wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container">
-                  <!-- Brand and toggle get grouped for better mobile display -->
-                  <a class="navbar-brand" href="index.html" id="logo">Staying In</a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <!-- Collect the nav links, forms, and other content for toggling -->
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Take our quiz!</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="recipes.html">All recipes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="store.html">Find your store</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container -->
-              </nav>
-              <!-- End of navbar -->
+  <div id="wrapper">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="quiz.html">Take our quiz!</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recipes.html">All recipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="store.html">Find your store</a>
+                </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- End of navbar -->
 </div>
 
         <main class="container">
@@ -49,7 +43,7 @@
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Zip Code</label>
                         <div class="col-sm-10">
-                        <input type="zipcode" class="form-control" id="zipcode" placeholder="zipcode">
+                        <input type="zipcode" class="form-control" id="zipcode" placeholder="your zip code">
                         </div>
                     </div>
                     
