Continue to update functionality of quiz.

--- a/quiz.html
+++ b/quiz.html
@@ -41,6 +41,7 @@
     </div>
 <body>
     <div id="question"></div>
+    <button id="previous-button">Previous</button>
     <button id="next-button">Next</button>
 </body>
 </html>
