Added navbar opacity and little styling additions

--- a/recipes.html
+++ b/recipes.html
@@ -35,7 +35,7 @@
     <!-- Search Jumbotron -->
     <div class="main-jumbotron" id = "search-jumbotron">
         <h1 class="display-4">Recipe Search</h1>
-        <p class="lead">Already have something in mind? Search below!.</p>
+        <p class="lead">Already have something in mind? Search below!</p>
 
         <!-- Recipe Search Bar -->
     <form class="example" action="action_page.php" id = "search-bar">
