--- a/store.html
+++ b/store.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/store.css">
+    <link rel="stylesheet" type="text/css" 
+    href="assets/css/store.css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Prompt|Sarala:700|Teko" rel="stylesheet">
 </head>
 <body>
 
@@ -33,7 +35,7 @@
 
     <!-- Search Jumbotron -->
     <div class="main-jumbotron" id = "search-jumbotron">
-        <h1 class="display-4">Nearby Grocery Store</h1>
+        <h1 class="display-4">Out of Ingredients?</h1>
         <p class="lead" id = "zipcodeP">Search for your nearby grocery store.</p>
     
         <!-- Zip Code Search Bar -->
