--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <button id = "recipes-button" class = "btn btn-light" onclick="window.location.href='recipes.html'">All Recipes</button>
             
-            <button id = "other-button" class = "btn btn-light" onclick="window.location.href='maps.html'">Nearby Grocery</button>
+            <button id = "other-button" class = "btn btn-light" onclick="window.location.href='store.html'">Nearby Grocery</button>
             <div id="edamam-badge"></div>
 
     </div>
