--- a/store.html
+++ b/store.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="store.html">Nearby Grocery</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="favorites.html">Your Favorites</a>
+            </li>
             </ul>
         </div>
     </nav>
