--- a/quiz.html
+++ b/quiz.html
@@ -19,6 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <!--link firebase here-->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+
     <title>Quiz</title>
 </head>
 <body>
@@ -30,15 +33,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="recipes.html">All Recipes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="store.html">Nearby Grocery</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recipes.html">All Recipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="store.html">Nearby Grocery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="favorites.html">Your Favorites</a>
+                </li>
             </ul>
         </div>
     </nav>
