--- a/recipes.html
+++ b/recipes.html
@@ -19,15 +19,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="recipes.html">All Recipes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="store.html">Nearby Grocery</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recipes.html">All Recipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="store.html">Nearby Grocery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="favorites.html">Your Favorites</a>
+                </li>
             </ul>
         </div>
     </nav>
