added various css styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <button id = "recipes-button" class = "btn btn-light" onclick="window.location.href='recipes.html'">All Recipes</button>
             
             <button id = "other-button" class = "btn btn-light" onclick="window.location.href='store.html'">Nearby Grocery</button>
+
+            <button id = "saved-button" class = "btn btn-light" onclick="window.location.href='favorites.html'">Saved Recipes</button>
             <div id="edamam-badge"></div>
 
     </div>
