Added ability to save to favorites from recipe browsing page.

--- a/favorites.html
+++ b/favorites.html
@@ -74,7 +74,7 @@
             <div class="col-lg-8">
                 <div class="card card-default">
                     <div class="card-header">
-                        Last Recipe From Quiz
+                        Last Interested Recipe
                     </div>
                 <div class="card-body">
                     <table class="table table-sm table-hover">
