--- a/recipes.html
+++ b/recipes.html
@@ -1,110 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/recipes.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/recipes.css">
 </head>
 
 <body>
-  
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="recipes.html">All Recipes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="store.html">Nearby Grocery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="favorites.html">Your Favorites</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <!-- Search Jumbotron -->
-    <div class="main-jumbotron" id = "search-jumbotron">
-        <h1 class="display-4">Recipe Search</h1>
-        <p class="lead">Already have something in mind? Search below!</p>
-
-        <!-- Recipe Search Bar -->
-    <form class="example" action="action_page.php" id = "search-bar">
-        <input type="text" placeholder="Search All Recipes..." id="search">
-        <input class="btn" id="searchSubmit" type="submit" value="Go">
-    </form>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="quiz.html">Take our quiz! <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="recipes.html">All Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="store.html">Nearby Grocery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="favorites.html">Your Favorites</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-    <!-- Recipe List -->
-    <div id = "recipes-appear-here"></div>
-  
-    <!-- Sample Pictures when the page loads -->
-    <div class="card-columns">
-            <div class="card card-body">
-              <img class="card-img-top" src="assets/images/background7.jpg" alt="Card image cap">
-            </div>
-            <div class="card p-3">
-              <blockquote class="blockquote mb-0 card-body">
-                <p>People who love to eat are always the best people.</p>
-                <footer class="blockquote-footer">
-                  <small class="text-muted">
-                    Julia Child
-                  </small>
-                </footer>
-              </blockquote>
-            </div>
-            <div class="card card-body">
-              <img class="card-img-top" src="assets/images/background1.jpg" alt="Card image cap">
-            </div>
-            <div class="card text-center p-3" id = "mainCard">
-              <blockquote class="blockquote mb-0">
-                <p>Search through thousands of recipes to find exactly what you need!</p>
-              </blockquote>
-            </div>
-            <div class="card card-body">
-                <img class="card-img-top" src="assets/images/background4.jpg" alt="Card image cap">
-            </div>
-            <div class="card p-3 text-right" id = "quoteCard">
-              <blockquote class="blockquote mb-0">
-                <p>My doctor told me I had to stop throwing intimate dinners for 4 unless there are 3 other people.</p>
-                <footer class="blockquote-footer">
-                  <small class="text-muted">
-                    Orson Welles
-                  </small>
-                </footer>
-              </blockquote>
-            </div>
-            <div class="card card-body">
-                <img class="card-img-top" src="assets/images/background2.jpg" alt="Card image cap">
-            </div>
-          </div>
-    
-    <!-- More Recipes Button -->
-    <button id = "more-recipes" class = "btn btn-light" >More Recipes</button>
+  <!-- Search Jumbotron -->
+  <div class="main-jumbotron" id="search-jumbotron">
+    <h1 class="display-4">Recipe Search</h1>
+    <p class="lead">Already have something in mind? Search below!</p>
 
-  
-    <!-- Script tags for jquery (bootstrap jquery included) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src ="assets/javascript/recipe.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <!-- Recipe Search Bar -->
+    <form class="example" action="action_page.php" id="search-bar">
+      <input type="text" placeholder="Search All Recipes..." id="search">
+      <input class="btn" id="searchSubmit" type="submit" value="Go">
+    </form>
+  </div>
+
+  <!-- Recipe List -->
+  <div id="recipes-appear-here"></div>
+
+  <!-- Sample Pictures when the page loads -->
+  <div class="card-columns">
+    <div class="card card-body">
+      <img class="card-img-top" src="assets/images/background7.jpg" alt="Card image cap">
+    </div>
+    <div class="card p-3">
+      <blockquote class="blockquote mb-0 card-body">
+        <p>People who love to eat are always the best people.</p>
+        <footer class="blockquote-footer">
+          <small class="text-muted">
+            Julia Child
+          </small>
+        </footer>
+      </blockquote>
+    </div>
+    <div class="card card-body">
+      <img class="card-img-top" src="assets/images/background1.jpg" alt="Card image cap">
+    </div>
+    <div class="card text-center p-3" id="mainCard">
+      <blockquote class="blockquote mb-0">
+        <p>Search through thousands of recipes to find exactly what you need!</p>
+      </blockquote>
+    </div>
+    <div class="card card-body">
+      <img class="card-img-top" src="assets/images/background4.jpg" alt="Card image cap">
+    </div>
+    <div class="card p-3 text-right" id="quoteCard">
+      <blockquote class="blockquote mb-0">
+        <p>My doctor told me I had to stop throwing intimate dinners for 4 unless there are 3 other people.</p>
+        <footer class="blockquote-footer">
+          <small class="text-muted">
+            Orson Welles
+          </small>
+        </footer>
+      </blockquote>
+    </div>
+    <div class="card card-body">
+      <img class="card-img-top" src="assets/images/background2.jpg" alt="Card image cap">
+    </div>
+  </div>
+
+  <!-- More Recipes Button -->
+  <button id="more-recipes" class="btn btn-light">More Recipes</button>
+
+
+  <!-- Script tags for jquery (bootstrap jquery included) -->
+  <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/recipe.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
- 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
